update from upstream

--- a/rtl8812au-ac/Makefile
+++ b/rtl8812au-ac/Makefile
@@ -1,3 +1,13 @@
+#
+# Copyright (C) 2020 stepheny
+#
+# Copyright (C) 2021 ImmortalWrt
+# <https://project-openwrt.eu.org>
+#
+# This is free software, licensed under the GNU General Public License v3.
+# See /LICENSE for more information.
+#
+
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=rtl8812au-ac
@@ -9,10 +19,11 @@ PKG_SOURCE_DATE:=2020-06-26
 PKG_SOURCE_VERSION:=58f6be25f7c86d7ba67b0ccc638cf667755e6e1b
 PKG_MIRROR_HASH:=60359df8b49fa433d38b968b0df7eaddaca10f13cdd57471394bac1f6e5a162e
 
-PKG_BUILD_PARALLEL:=1
-
-PKG_LICENSE:=GPLv2
+PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=LICENSE
+PKG_MAINTAINER:=Marty Jones <mj8263788@gmail.com>
+
+PKG_BUILD_PARALLEL:=1
 
 STAMP_CONFIGURED_DEPENDS := $(STAGING_DIR)/usr/include/mac80211-backport/backport/autoconf.h
 
@@ -38,8 +49,7 @@ NOSTDINC_FLAGS = \
 	-include backport/backport.h
 
 NOSTDINC_FLAGS += -DCONFIG_IOCTL_CFG80211 -DRTW_USE_CFG80211_STA_EVENT \
-	-DRTW_SINGLE_WIPHY -DCONFIG_CONCURRENT_MODE -D_LINUX_BYTEORDER_SWAB_H \
-	-DBUILD_OPENWRT
+	-DRTW_SINGLE_WIPHY -DCONFIG_CONCURRENT_MODE -D_LINUX_BYTEORDER_SWAB_H
 
 ifeq ($(CONFIG_BIG_ENDIAN), y)
 NOSTDINC_FLAGS += -DCONFIG_BIG_ENDIAN
@@ -49,7 +59,6 @@ NOSTDINC_FLAGS += -DCONFIG_LITTLE_ENDIAN
 endif
 
 PKG_MAKE_FLAGS += USER_MODULE_NAME=rtl8812au
-PKG_MAKE_FLAGS += USER_DRV_NAME=rtl8812au
 KERNEL_MAKE_FLAGS += CONFIG_88XXAU=m
 
 define Build/Compile
