--- a/luci-app-naiveproxy/Makefile
+++ b/luci-app-naiveproxy/Makefile
@@ -7,14 +7,14 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=luci-app-gost
+PKG_NAME:=luci-app-naiveproxy
 PKG_VERSION:=1.0
 PKG_RELEASE:=1
-LUCI_TITLE:=LuCI support for Gost
-LUCI_DEPENDS:=+gost
+LUCI_TITLE:=LuCI support for NaiveProxy
+LUCI_DEPENDS:=+naiveproxy
 LUCI_PKGARCH:=all
 
-PKG_MAINTAINER:=ImmortalWrt
+PKG_MAINTAINER:=CN_SZTL <cnsztl@project-openwrt.eu.org>
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
