--- a/ddns-scripts_dnspod/Makefile
+++ b/ddns-scripts_dnspod/Makefile
@@ -1,11 +1,11 @@
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=ddns-scripts_aliyun
-PKG_VERSION:=1.0.3
+PKG_NAME:=ddns-scripts_dnspod
+PKG_VERSION:=1.0.2
 PKG_RELEASE:=1
 
 PKG_LICENSE:=GPLv2
-PKG_MAINTAINER:=Sense <sensec@gmail.com>
+PKG_MAINTAINER:=Small_5
 
 PKG_BUILD_PARALLEL:=1
 
@@ -15,13 +15,13 @@ define Package/$(PKG_NAME)
 	SECTION:=net
 	CATEGORY:=Network
 	SUBMENU:=IP Addresses and Names
-	TITLE:=DDNS extension for AliYun.com
+	TITLE:=DDNS extension for Dnspod.com/Dnspod.cn
 	PKGARCH:=all
-	DEPENDS:=ddns-scripts +wget-ssl +openssl-util
+	DEPENDS:=ddns-scripts +wget-ssl +ca-certificates
 endef
 
 define Package/$(PKG_NAME)/description
-	Dynamic DNS Client scripts extension for AliYun.com
+	Dynamic DNS Client scripts extension for Dnspod.com/Dnspod.cn
 endef
 
 define Build/Configure
@@ -32,8 +32,8 @@ endef
 
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/lib/ddns $(1)/usr/share/ddns/default
-	$(INSTALL_BIN) $(CURDIR)/files/update_aliyun_com.sh $(1)/usr/lib/ddns
-	$(INSTALL_DATA) $(CURDIR)/files/aliyun.com.json $(1)/usr/share/ddns/default
+	$(INSTALL_BIN) $(CURDIR)/files/*.sh $(1)/usr/lib/ddns
+	$(INSTALL_DATA) $(CURDIR)/files/*.json $(1)/usr/share/ddns/default
 endef
 
 define Package/$(PKG_NAME)/prerm
