--- a/rtl8821cu/Makefile
+++ b/rtl8821cu/Makefile
@@ -9,13 +9,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=rtl8821cu
-PKG_RELEASE:=1
+PKG_RELEASE:=2
 
 PKG_SOURCE_URL:=https://github.com/brektrou/rtl8821CU.git
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_DATE:=2020-12-19
-PKG_SOURCE_VERSION:=428a0820487418ec69c0edb91726d1cf19763b1e
-PKG_MIRROR_HASH:=77958d3bff8b0145504a10959765be0e3743b9c4880a5173d156238c2c569a56
+PKG_SOURCE_DATE:=2021-03-27
+PKG_SOURCE_VERSION:=f1bc7e86c4a1c67bee04c361dd978683869d2347
+#PKG_MIRROR_HASH:=77958d3bff8b0145504a10959765be0e3743b9c4880a5173d156238c2c569a56
 
 PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=LICENSE
