--- a/r8168/Makefile
+++ b/r8168/Makefile
@@ -1,23 +1,16 @@
-#
-# Download realtek r8168 linux driver from official site:
-# [https://www.realtek.com/component/zoo/category/network-interface-controllers-10-100-1000m-gigabit-ethernet-pci-express-software]
-#
+# Attribution: https://gist.github.com/lenew/9b41ba901c3393047ede0766760f9d55
+
+#Put this source to 'package/kernel/r8125' folder of OpenWRT/LEDE SDK
+#Build(make menuconfig, make defconfig, make)
 
 include $(TOPDIR)/rules.mk
 include $(INCLUDE_DIR)/kernel.mk
 
 PKG_NAME:=r8168
-PKG_VERSION:=8.048.03
-PKG_RELEASE:=3
-
-PKG_SOURCE_PROTO:=git
-PKG_SOURCE_URL:=https://github.com/BROBIRD/openwrt-r8168.git
-PKG_SOURCE_VERSION:=93718d4ae69097a14a9e93ea8765f7767e2ddd9e
-PKG_MIRROR_HASH:=d5cfe3184d84de5a686720c9855c295ab1cd1423777f70c5488eb7aa588a52e9
+PKG_VERSION:=8.049.00
+PKG_RELEASE:=1
 
 PKG_BUILD_DIR:=$(KERNEL_BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
-
-MAKE_PATH:=src
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -25,8 +18,7 @@ define KernelPackage/r8168
   TITLE:=Driver for Realtek r8168 chipsets
   SUBMENU:=Network Devices
   VERSION:=$(LINUX_VERSION)+$(PKG_VERSION)-$(BOARD)-$(PKG_RELEASE)
-  DEPENDS:=@LINUX_5_4
-  FILES:= $(PKG_BUILD_DIR)/src/r8168.ko
+  FILES:= $(PKG_BUILD_DIR)/r8168.ko
   AUTOLOAD:=$(call AutoProbe,r8168)
   CONFLICTS:=kmod-r8169
 endef
@@ -35,7 +27,7 @@ define Package/r8168/description
   This package contains a driver for Realtek r8168 chipsets.
 endef
 
-R8168_MAKEOPTS= -C $(PKG_BUILD_DIR)/src \
+R8168_MAKEOPTS= -C $(PKG_BUILD_DIR)/ \
 	PATH="$(TARGET_PATH)" \
 	ARCH="$(LINUX_KARCH)" \
 	CROSS_COMPILE="$(TARGET_CROSS)" \
